Revision history for CPrAN

0.0303    2016-07-14 10:32:57+01:00 Europe/London

  * New features:
    * install: special case allows for Praat installation (Experimental!)
    * upgrade: special case allows for Praat version upgrade (Experimental!)
  * Changes:
    * create: new options to specify plugin metadata
    * create: plugin metadata propagates through plugin template
    * Version strings are processed by SemVer package
  * Fixes:
    * Improved documentation of existing and added features
    * create: random names can no longer have illegal characters
    * upgrade: only those plugins that need upgrading are reordered
    * Fixed some inconsistencies with handling of global --bin option
    * Fixed inconsistencies in return values for commands

0.0302    2016-07-04 22:37:42+01:00 Europe/London

  * New features:
    * All install commands take explicit --test (or --notest)
    * New --bin option to specify path to Praat binary
    * Plugin names accept hyphens, underscores and digits
    * upgrade: if using git, pull does not require specific remotes
    * test: --verbose option now prints additional information on tests
  * Bug fix:
    * Improved binary detection in Windows
    * Improved bit detection in Linux
    * deps: Better detection of top nodes in dependency tree
    * upgrade: plugins are updated in order

0.0301    2016-04-11 17:11:35+01:00 Europe/London

  * Bug fix:
    Validate plugin dependencies before assignment in install

0.03      2016-04-11 02:26:04+01:00 Europe/London

  * New commands:
    * create: make a new plugin from a template
    * deps: list the dependencies of a plugin
  * New features:
    * Commands can now be piped together
    * Path parameters can be read from environment
    * New --notest option for install, to skip tests altogether
    * Removed warnings about non-existing root directory. It is silently
      created now.
  * Fixes:
    * Improvements in test stability, but still more work needed