@@ -43,7 +43,6 @@ requires:
   Path::Class: '0.35'
   Regexp::Common: '0'
   SemVer: '0'
-  Sort::Naturally: '0'
   TAP::Harness::Archive: '0'
   Term::ReadKey: '0'
   Text::FormatTable: '0'
@@ -53,6 +52,7 @@ requires:
   URI::QueryParam: '0'
   YAML::XS: '0'
   diagnostics: '0'
+  overload: '0'
   strict: '0'
   warnings: '0'
 version: '0.0303'
