@@ -47,7 +47,6 @@ my %WriteMakefileArgs = (
     "Path::Class" => "0.35",
     "Regexp::Common" => 0,
     "SemVer" => 0,
-    "Sort::Naturally" => 0,
     "TAP::Harness::Archive" => 0,
     "Term::ReadKey" => 0,
     "Text::FormatTable" => 0,
@@ -57,6 +56,7 @@ my %WriteMakefileArgs = (
     "URI::QueryParam" => 0,
     "YAML::XS" => 0,
     "diagnostics" => 0,
+    "overload" => 0,
     "strict" => 0,
     "warnings" => 0
   },
@@ -100,7 +100,6 @@ my %FallbackPrereqs = (
   "Path::Class" => "0.35",
   "Regexp::Common" => 0,
   "SemVer" => 0,
-  "Sort::Naturally" => 0,
   "TAP::Harness::Archive" => 0,
   "Term::ReadKey" => 0,
   "Test::More" => 0,
@@ -111,6 +110,7 @@ my %FallbackPrereqs = (
   "URI::QueryParam" => 0,
   "YAML::XS" => 0,
   "diagnostics" => 0,
+  "overload" => 0,
   "strict" => 0,
   "warnings" => 0
 );
