@@ -1,6 +1,6 @@
 Revision history for CPrAN
 
-0.0303    2016-07-14 10:32:57+01:00 Europe/London
+{{$NEXT}}
 
   * New features:
     * install: special case allows for Praat installation (Experimental!)
@@ -9,6 +9,8 @@ Revision history for CPrAN
     * create: new options to specify plugin metadata
     * create: plugin metadata propagates through plugin template
     * Version strings are processed by SemVer package
+    * Removed Sort::Naturally from dependencies
+    * install: plugin names no longer accepted with "plugin_" prefix
   * Fixes:
     * Improved documentation of existing and added features
     * create: random names can no longer have illegal characters
